Improve Compact Source File (JDK 25) support: stdin, args, stack-trace links, preflight
- Console stdin: the Run window gains an input field (enabled while
  running); a line is echoed and written to the process stdin off-thread
  (RunService.sendInput), so IO.readln-style interactive programs work.
- Program arguments: file.runWithArgs prompts (pre-filled, quote-aware
  via the pure run/ProgramArgs.tokenize), persists per file in
  WorkspaceState.programArgs (additive field), and feeds both Run and
  Debug launches (DapManager.setProgramArgs, sticky across restart;
  LaunchConfig.program gains an args overload for debugpy/js-debug).
  run.rerun repeats the last file+argv.
- Clickable stack traces: pure run/StackTraceLinks.parse recognizes
  Java/Python/Node frames; double-clicking such a line in the Run or
  Debug console resolves the file (absolute path, open tabs, run dir,
  project root) and jumps to it.
- JDK 25 preflight: RunService.detectJavaMajor probes java -version once
  (cached; pure javaMajorOf handles the legacy 1.x scheme) so a java run
  on an older JDK reports "needs JDK 25 - found Java N" clearly.
- jdtls noise filter: implicit-class complaints from a server whose
  compliance predates JDK 25 are dropped for compact buffers (pure
  MainController.isCompactSourceNoise); real errors still surface.
- Snippets: cmain (compact void main skeleton), ioprintln/iop, ioreadln.

All strings in the six i18n catalogs; CLAUDE.md + CHANGELOG updated;
11 new unit tests (500 total green).

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>